--- a/in-memory-hashmap.cabal
+++ b/in-memory-hashmap.cabal
@@ -30,8 +30,11 @@ executable in-memory-hashmap
                  ,          Storage.Types.Artist
                  ,          Storage.Types.Customer
                  ,          Storage.Types.Cache
+                 ,          Storage.Types.CacheClass
+                 ,          Storage.Types.CacheTH
                  ,          Storage.Types.DB
                  ,          Storage.Types.Employee
+                 ,          Storage.Types.FilterBy
                  ,          Storage.Types.Genre
                  ,          Storage.Types.Invoice
                  ,          Storage.Types.InvoiceLine
@@ -54,6 +57,7 @@ executable in-memory-hashmap
                       ,    FlexibleContexts
                       ,    OverloadedStrings
                       ,    RecordWildCards
+                      ,    TemplateHaskell
     build-depends:         base
                  ,         sqlite-simple
                  ,         beam-sqlite
@@ -65,6 +69,8 @@ executable in-memory-hashmap
                  ,         transformers
                  ,         unordered-containers
                  ,         containers
+                 ,         template-haskell
+                 ,         th-abstraction
     ghc-options: -Wall
     hs-source-dirs:        app
     default-language: Haskell2010
