--- a/in-memory-hashmap.cabal
+++ b/in-memory-hashmap.cabal
@@ -73,6 +73,8 @@ executable in-memory-hashmap
                  ,         containers
                  ,         template-haskell
                  ,         th-abstraction
+                 ,         unagi-chan
+                 ,         extra
     ghc-options: -Wall
     hs-source-dirs:        app
     default-language: Haskell2010
