--- a/in-memory-hashmap.cabal
+++ b/in-memory-hashmap.cabal
@@ -25,17 +25,17 @@ extra-source-files: CHANGELOG.md
 
 executable in-memory-hashmap
     main-is:                Main.hs
-    other-modules:          Storage.Cache.CacheWorker
+    other-modules:          Storage.Cache.Cache
+                 ,          Storage.Cache.CacheChannel
+                 ,          Storage.Cache.CacheTH
+                 ,          Storage.Cache.CacheWorker
+                 ,          Storage.Cache.Queries
                  ,          Storage.FilterBy.Album
                  ,          Storage.FilterBy.Artist
                  ,          Storage.Types.Address
                  ,          Storage.Types.Album
                  ,          Storage.Types.Artist
                  ,          Storage.Types.Customer
-                 ,          Storage.Types.Cache
-                 ,          Storage.Types.CacheChannel
-                 ,          Storage.Types.CacheClass
-                 ,          Storage.Types.CacheTH
                  ,          Storage.Types.DB
                  ,          Storage.Types.Employee
                  ,          Storage.Types.FilterBy
@@ -49,7 +49,6 @@ executable in-memory-hashmap
                  ,          Storage.Queries.Artist
                  ,          Storage.Queries.Album
                  ,          Storage.Queries.DBQueries
-                 ,          Storage.Queries.CacheQueries
                  ,          Storage.QueriesMiddleware.Artist
                  ,          Storage.QueriesMiddleware.Album
                  ,          Reader
@@ -62,7 +61,6 @@ executable in-memory-hashmap
                       ,    DuplicateRecordFields
                       ,    FlexibleContexts
                       ,    OverloadedStrings
-                      ,    RecordWildCards
                       ,    TemplateHaskell
     build-depends:         base
                  ,         sqlite-simple
@@ -79,6 +77,7 @@ executable in-memory-hashmap
                  ,         th-abstraction
                  ,         unagi-chan
                  ,         extra
+                 ,         lens
     ghc-options: -Wall
     hs-source-dirs:        app
     default-language: Haskell2010
